# quito

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  pyproject.toml
.githooks/: pre-commit
quito/: __init__.py  cli.py  models.py  pipeline.py  review_pipeline.py  store.py
quito/agents/: claude.py  claude_fixer.py  claude_review.py  codex.py  gemini.py  gemini_review.py  multi_review.py
quito/browser/: capture.py
quito/stages/: base.py  bugbash.py  gate.py  spec_gen.py  spec_parse.py  verify.py
specs/: example-todo.md
